crates/cairn-api/tests/snapshots/snapshots__pelias_search.snap
---
source: crates/cairn-api/tests/snapshots.rs
expression: body
---
{
  "features": [
    {
      "geometry": {
        "coordinates": [
          9.5209,
          47.141
        ],
        "type": "Point"
      },
      "properties": {
        "confidence": 0.73493004,
        "id": "2333060869803474945",
        "label": "Vaduz (city)",
        "layer": "city",
        "name": "Vaduz"
      },
      "type": "Feature"
    }
  ],
  "geocoding": {
    "attribution": "© OpenStreetMap contributors, WhosOnFirst, OpenAddresses",
    "engine": {
      "bundle_id": "[bundle_id]",
      "name": "cairn"
    },
    "query": {
      "boundary.rect.max_lat": null,
      "boundary.rect.max_lon": null,
      "boundary.rect.min_lat": null,
      "boundary.rect.min_lon": null,
      "categories": null,
      "focus.point.lat": null,
      "focus.point.lon": null,
      "lang": null,
      "layers": null,
      "phonetic": null,
      "semantic": null,
      "size": 2,
      "text": "Vaduz"
    },
    "version": "0.2"
  },
  "type": "FeatureCollection"
}
