crates/cairn-api/tests/snapshots/snapshots__v1_expand.snap
---
source: crates/cairn-api/tests/snapshots.rs
expression: body
---
{
  "expansions": [
    "123 main street"
  ],
  "query": "123 Main St"
}
