crates/cairn-api/tests/snapshots/snapshots__v1_layers.snap
---
source: crates/cairn-api/tests/snapshots.rs
expression: body
---
{
  "description": "Allowed values for the 'layer' query parameter on /v1/search and /v1/reverse",
  "layers": [
    "country",
    "region",
    "county",
    "city",
    "district",
    "neighborhood",
    "street",
    "address",
    "poi",
    "postcode"
  ]
}
