crates/cairn-api/tests/snapshots/snapshots__v1_search_empty_error.snap
---
source: crates/cairn-api/tests/snapshots.rs
expression: body
---
{
  "error": "query parameter 'q' is required"
}
