crates/cairn-api/tests/snapshots/snapshots__v1_structured.snap
---
source: crates/cairn-api/tests/snapshots.rs
expression: body
---
{
  "layer_hint": "country",
  "query": "Liechtenstein",
  "results": [
    {
      "admin_path": [],
      "kind": "country",
      "langs": [
        "default"
      ],
      "lat": 47.13,
      "level": 0,
      "lon": 9.555,
      "name": "Liechtenstein",
      "place_id": 27217860589780993,
      "score": 5.5451775
    }
  ]
}
